--- a/Shuttle.Recall.SqlServer.Tests/Section/files/event-store-grouped.config
+++ b/Shuttle.Recall.SqlServer.Tests/Section/files/event-store-grouped.config
@@ -8,12 +8,7 @@
 
 	<shuttle>
 		<eventStore
-			connectionStringName="EventStore"
+			connectionStringName="event-store-connection-string-name"
 	    />
 	</shuttle>
-
-	<connectionStrings>
-		<clear/>
-		<add name="EventStore" connectionString="Data Source=.;Initial Catalog=shuttle;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-	</connectionStrings>
 </configuration>
