--- a/Shuttle.Recall.SqlServer.Tests/Shuttle.Recall.SqlServer.Tests.csproj
+++ b/Shuttle.Recall.SqlServer.Tests/Shuttle.Recall.SqlServer.Tests.csproj
@@ -41,10 +41,12 @@
     <Reference Include="Shuttle.Core.Infrastructure">
       <HintPath>..\packages\shuttle-core-infrastructure.3.1.5\lib\net35-full\Shuttle.Core.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="Shuttle.Recall.Core">
-      <HintPath>..\packages\shuttle-recall-core.1.0.1\lib\net35-full\Shuttle.Recall.Core.dll</HintPath>
+    <Reference Include="Shuttle.Recall.Core, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\shuttle-recall-core.1.0.3\lib\net35-full\Shuttle.Recall.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,11 +62,22 @@
     <Compile Include="Mocks\MoveCommand.cs" />
     <Compile Include="Mocks\MovedEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Section\EventStoreSectionFixture.cs" />
+    <Compile Include="Section\EventStoreSectionTest.cs" />
     <Compile Include="Timer.cs" />
+    <Compile Include="UniqueHasStoreTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+    <None Include="Section\files\event-store-grouped.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Section\files\event-store.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shuttle.Recall.SqlServer\Shuttle.Recall.SqlServer.csproj">
